<resources>

    <string name="app_name">Andretro</string>
    <string name="load_state">Load State</string>
    <string name="save_state">Save State</string>
    <string name="reset">Reset</string>
    <string name="root_directory">SD Card Root</string>
    <string name="input_settings">Input Settings</string>
    <string name="input_method">Input Method</string>
    <string name="show_on_screen_input">On Screen Input</string>
    <string name="system_settings">System Settings</string>
    <string-array name="aspect_mode_values">
        <item >Default</item>
        <item >4:3</item>
        <item >Pixel Aspect</item>
    </string-array>
    <string-array name="orientation_modes">
        <item >Sensor</item>
        <item >Landscape</item>
        <item >Portrait</item>
    </string-array>
        <string name="file_type_icon">File type icon</string>
        <string name="screenshot">Take Screenshot</string>
        <string name="pause">Pause</string>

</resources>