<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/save_state" android:title="@string/save_state"></item>
    <item android:id="@+id/load_state" android:title="@string/load_state"></item>
    <item android:id="@+id/reset" android:title="@string/reset"></item>
    <item android:id="@+id/input_method_select" android:title="@string/input_method" android:showAsAction="always"></item>
    <item android:id="@+id/system_settings" android:title="@string/system_settings"></item>
    <item android:id="@+id/show_on_screen_input" android:checkable="true" android:title="@string/show_on_screen_input" android:checked="true"></item>
    <item android:id="@+id/screenshot" android:title="@string/screenshot"></item>
    <item android:id="@+id/pause" android:title="@string/pause" android:checkable="true" android:checked="false"></item>
    
    

</menu>